--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,15 @@
   text-align: center;
 }
 
+.main-nav {
+  background: black;
+  width: 100%;
+  display: flex;
+  color: white;
+  font-weight: bold;
+  font-size: 35px;
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
