--- a/src/App.css
+++ b/src/App.css
@@ -3,12 +3,13 @@
 }
 
 .main-nav {
-  background: black;
+  background: white;
   width: 100%;
   display: flex;
-  color: white;
+  color: black;
   font-weight: bold;
-  font-size: 35px;
+  font-size: 30px;
+  border-bottom: solid 1px #777777;
 }
 
 .App-logo {
