--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,11 @@
   border-bottom: solid 1px #777777;
 }
 
+.profile-image-nav {
+  width: 40px;
+  height: 40px;
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
