--- a/src/App.css
+++ b/src/App.css
@@ -2,19 +2,28 @@
   text-align: center;
 }
 
-.main-nav {
+.nav-main{
   background: white;
   width: 100%;
   display: flex;
-  color: black;
-  font-weight: bold;
-  font-size: 30px;
+  text-align: center;
+  justify-content: space-between;
   border-bottom: solid 1px #777777;
 }
 
-.profile-image-nav {
+.nav-image-profile {
   width: 40px;
   height: 40px;
+  border-radius: 100%;
+  overflow: hidden;
+  padding: 20px 10px;
+}
+
+.nav-text {
+  color: black;
+  font-weight: bold;
+  font-size: 30px;
+  padding: 20px 10px;
 }
 
 .App-logo {
