--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,8 @@
-.App {
-  text-align: center;
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
 }
 
 .nav-main{
@@ -16,7 +19,7 @@
   height: 40px;
   border-radius: 100%;
   overflow: hidden;
-  padding: 20px 10px;
+  padding: 10px 20px;
 }
 
 .nav-text {
