--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -26,9 +26,7 @@
   overflow: hidden;
   cursor: pointer;
   border-radius: 100%;
-  border-width: 2px;
-  border-color: #7F00FF;
-  padding-right: 10px;
+  border: 2px solid #7F00FF;
 }
 
 .nav-text {
@@ -40,6 +38,10 @@
   font-size: 30px;
   cursor: pointer;
   padding: 0px 10px;
+}
+
+.nav-text:hover {
+  color: #7F00FF
 }
 
 .nav-text.active {
