--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -7,7 +7,7 @@
   border-bottom: solid 1px #777777;
   padding: 10px 20px;
   box-sizing: border-box;
-  position: fixed;
+  position: sticky;
 }
 
 .nav-left {
