--- a/src/pages/Main.css
+++ b/src/pages/Main.css
@@ -103,6 +103,14 @@
   justify-content: center;
 }
 
+.skill-icon-grid {
+  display: grid;
+  justify-content: center;
+  grid-template-columns: repeat(auto-fill, 40px);
+  gap: 20px 10px;
+  padding: 10px;
+}
+
 .projects,
 .experiences {
   grid-column: 1 / -1;
