--- a/src/components/ProfileData.css
+++ b/src/components/ProfileData.css
@@ -72,12 +72,14 @@
 
 .experience-row {
     display: grid;
-    grid-template-columns: 120px 1px 1fr;
+    grid-template-columns: 120px 1px 1fr auto;
     column-gap: 20px;
     align-items: start;
 }
 
 .experience-date {
+    grid-column: 1;
+    grid-row: 1;
     color: black;
     font-family: 'NexonKartGothic';
     font-weight: 700;
@@ -86,9 +88,16 @@
 }
 
 .experience-divider {
+    grid-column: 2;
+    grid-row: 1;
     align-self: stretch;
     width: 1px;
     background-color: var(--main-color);
+}
+
+.experience-content {
+    grid-column: 3;
+    grid-row: 1;
 }
 
 .experience-name {
@@ -96,6 +105,7 @@
     font-family: 'NexonKartGothic';
     font-weight: 700;
     font-size: 30px;
+    margin-top: -5px;
     margin-bottom: -5px;
 }
 
@@ -108,6 +118,7 @@
 
 .experience-description {
     grid-column: 1 / -1;
+    grid-row: 2;
     font-family: 'NexonKartGothic';
     font-weight: 500;
     font-size: 20px;
@@ -115,8 +126,22 @@
     margin: 5px 10px
 }
 
+.experience-url {
+    grid-column: 4;
+    grid-row: 1 / 3;
+    align-self: center;
+    font-size: 1.5rem;
+    color: var(--description-color);
+    padding-right: 10px;
+}
+
+.experience-url:hover {
+    color: var(--main-color);
+}
+
 .experience-divider-bottom {
     grid-column: 1 / -1;
+    grid-row: 3;
     height: 1px;
     background-color: var(--main-color);
     margin-bottom: 10px;
