--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -1,4 +1,7 @@
 .nav-main {
+  position: sticky;
+  top: 0;
+  z-index: 1000;
   background: white;
   width: 100%;
   display: flex;
@@ -7,7 +10,6 @@
   border-bottom: solid 1px var(--description-color);
   padding: 10px 20px;
   box-sizing: border-box;
-  position: sticky;
 }
 
 .nav-left {
