[Feat] Added Footer

--- a/src/App.css
+++ b/src/App.css
@@ -16,3 +16,9 @@ main {
   margin: auto;
   padding: 40px 20px;
 }
+
+.copyright {
+  justify-content: center;
+  padding: 20px;
+  text-align: center;
+}
