--- a/src/App.css
+++ b/src/App.css
@@ -17,8 +17,22 @@ main {
   padding: 40px 20px;
 }
 
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
 .copyright {
   justify-content: center;
-  padding: 20px;
   text-align: center;
+  background: white;
+  width: 100%;
+  padding-top: 40px;
+  padding-bottom: 120px;
+
+  font-family: 'NexonKartGothic';
+  font-weight: 500;
+  font-size: 20px;
 }
