--- a/src/pages/Main.css
+++ b/src/pages/Main.css
@@ -16,9 +16,7 @@
   border: 2px solid var(--main-color);
   border-radius: 5%;
 
-  position: sticky;
-  top: 40px;
-  transition: transform 0.2s ease-out;
+  will-change: transform;
 }
 
 .side-link {
