--- a/src/components/ProfileData.css
+++ b/src/components/ProfileData.css
@@ -158,3 +158,17 @@
 .experience-3rd-award {
     color: chocolate;
 }
+
+.badge-ongoing {
+    margin-left: 8px;
+    padding: 2px 8px;
+    border-radius: 6px;
+
+    font-size: 1rem;
+    font-weight: 700;
+    color: var(--badge-ongoing-color);
+    background-color: var(--badge-background-color);
+
+    vertical-align: middle;
+    white-space: nowrap;
+}
