--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,14 @@
   --description-color: #777777;
   --badge-ongoing-color: #15803D;
   --badge-background-color: #F3F4F6;
+
+  --main-font: 50px;  
+  --title-font: 40px;
+  --subtitle-font: 25px;
+  --description-font: 20px;
+
+  --profile-image-size: 300px;
+  --icon-image-size: 40px;
 }
 
 * {
@@ -37,4 +45,26 @@ main {
   font-family: 'NexonKartGothic';
   font-weight: 500;
   font-size: 20px;
+}
+
+@media (max-width: 1024px) {
+  :root {
+    --main-font: 45px;
+    --title-font: 35px;
+    --subtitle-font: 25px;
+    --description-font: 20px;
+
+    --profile-image-size: 200px;
+  }
+}
+
+@media (max-width: 768px) {
+  :root {
+    --main-font: 40px;
+    --title-font: 30px;
+    --subtitle-font: 20px;
+    --description-font: 16px;
+
+    --profile-image-size: 160px;
+  }
 }
