--- a/src/components/ProfileData.css
+++ b/src/components/ProfileData.css
@@ -83,7 +83,7 @@
     color: black;
     font-family: 'NexonKartGothic';
     font-weight: 700;
-    font-size: 20px;
+    font-size: var(--description-font);
     padding-left: 10px;
 }
 
@@ -104,7 +104,7 @@
     color: black;
     font-family: 'NexonKartGothic';
     font-weight: 700;
-    font-size: 30px;
+    font-size: var(--subtitle-font);
     margin-top: -5px;
     margin-bottom: -5px;
 }
@@ -113,7 +113,7 @@
     color: var(--description-color);
     font-family: 'NexonKartGothic';
     font-weight: 700;
-    font-size: 20px;
+    font-size: var(--description-font);
 }
 
 .experience-description {
@@ -121,7 +121,7 @@
     grid-row: 2;
     font-family: 'NexonKartGothic';
     font-weight: 500;
-    font-size: 20px;
+    font-size: var(--description-font);
     color: var(--description-color);
     margin: 5px 10px
 }
@@ -130,7 +130,7 @@
     grid-column: 4;
     grid-row: 1 / 3;
     align-self: center;
-    font-size: 1.5rem;
+    font-size: var(--subtitle-font);
     color: var(--description-color);
     padding-right: 10px;
 }
