--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -1,6 +1,6 @@
 .home-image-profile {
-  width: 300px;
-  height: 300px;
+  width: var(--profile-image-size);
+  height: var(--profile-image-size);
   border-radius: 100%;
   object-fit: cover;
   cursor: pointer;
