--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,9 @@
   --badge-ongoing-color: #15803D;
   --badge-background-color: #F3F4F6;
 
+  --background-main-color: #ffffff;
+  --text-main-color: #000000;
+
   --main-font: 50px;  
   --title-font: 40px;
   --subtitle-font: 25px;
@@ -20,9 +23,14 @@
   box-sizing: border-box;
 }
 
+body {
+  background-color: var(--background-main-color);
+}
+
 main {
   width: 80%;
   max-width: calc(100%-2em);
+  background-color: var(--background-main-color);
   margin: auto;
   padding: 40px 20px;
 }
@@ -37,7 +45,7 @@ main {
 .copyright {
   justify-content: center;
   text-align: center;
-  background: white;
+  background: var(--background-main-color);
   width: 100%;
   padding-top: 40px;
   padding-bottom: 120px;
@@ -45,6 +53,7 @@ main {
   font-family: 'NexonKartGothic';
   font-weight: 500;
   font-size: 20px;
+  color: var(--text-main-color);
 }
 
 @media (max-width: 1024px) {
@@ -66,5 +75,18 @@ main {
     --description-font: 16px;
 
     --profile-image-size: 160px;
+  }
+}
+
+@media (prefers-color-scheme: dark) {
+  :root {
+    --main-color: #7F00FF;
+    --divider-color: #BBBBBB;
+    --description-color: #BBBBBB;
+    --badge-ongoing-color: #4ab973;
+    --badge-background-color: #F3F4F6;
+
+    --background-main-color: #000000;
+    --text-main-color: #ffffff;
   }
 }
