[Feat] Fixed Blog Page UI

--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,7 @@
   --title-font: 40px;
   --subtitle-font: 25px;
   --description-font: 20px;
+  --information-font: 15px;
 
   --profile-image-size: 300px;
   --icon-image-size: 40px;
