--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 :root {
   --main-color: #7F00FF;
+  --main-color-rgb: rgb(127, 0, 255);
   --description-color: #777777;
   --badge-background-color: #F3F4F6;
 
@@ -81,6 +82,7 @@ main {
 @media (prefers-color-scheme: dark) {
   :root {
     --main-color: #9B6CFF;
+    --main-color-rgb: rgb(155, 108, 255);
     --description-color: #BBBBBB;
     --badge-background-color: #F3F4F6;
 
