--- a/src/components/blog/BlogSidebar.css
+++ b/src/components/blog/BlogSidebar.css
@@ -35,3 +35,9 @@
   border-color: var(--main-color);
   font-weight: 700;
 }
+
+@media (max-width: 768px) {
+    .blog-sidebar {
+        display: none;
+    }
+}
