[Feat] Writing Blog Post

--- a/src/components/blog/BlogList.css
+++ b/src/components/blog/BlogList.css
@@ -51,6 +51,11 @@
     font-size: var(--subtitle-font);
     font-weight: 700;
     line-height: 1.3;
+    display: -webkit-box;
+    -webkit-line-clamp: 1;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .post-meta {
@@ -62,4 +67,9 @@
     font-size: var(--information-font);
     color: var(--description-color);
     line-height: 1.5;
+    display: -webkit-box;
+    -webkit-line-clamp: 1;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
