--- a/src/components/blog/BlogPost.css
+++ b/src/components/blog/BlogPost.css
@@ -26,3 +26,10 @@
     padding: 2px 6px;
     border-radius: 4px;
 }
+
+.post-body img {
+    max-width: 100%;
+    height: auto;
+    display: block;
+    margin: 24px auto;
+}
